<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">One Contact</string>
	<string name="app_desc">Home Screen contact widget.</string>
	<string name="cnt_name">Contact not selected</string>
	<string name="button_pick">Pick a contact</string>
	<string name="button_quit">Cancel</string>
	<string name="button_apply">Apply</string>
	
	<string name="l_open_contact">Open contact</string>
	<string name="l_contact_name">Contact name</string>
	<string name="l_display_name">Display contact name in widget</string>
	
	<string-array name="phone_type">
		<item>Home</item>
		<item>Mobile</item>
		<item>Work</item>
		<item>Fax work</item>
		<item>Fax home</item>
		<item>Pager</item>
		<item>Other</item>
		<item>Callback</item>
		<item>Car</item>
		<item>Company main</item>
		<item>ISDN</item>
		<item>Other fax</item>
		<item>Radio</item>
		<item>Telex</item>
		<item>TTY_TDD</item>
		<item>Work mobile</item>
		<item>Work pager</item>
		<item>Assistant</item>
		<item>MMS</item>
	</string-array>
</resources>
